2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Fix ugly close dialog
	button

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css
	mobile/index.php
	mobile/operation/visualmap.php
	mobile/operation/tactical.php
	mobile/operation/module_graph.php
	mobile/operation/modules.php
	mobile/operation/agent.php: More improvements on
	visual styles in mobile console. Layouts, adaption
	of graphs dinamically to the screen using ajax, etc.

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/agents.php
	mobile/operation/events.php
	mobile/include/style/main.css
	mobile/include/ui.class.php: More visual improvements
	on mobile console

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Fix style of the close
	button of global search control

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fixed total agents
	count for group All

	* include/functions_graph.php
	mobile/operation/module_graph.php
	mobile/operation/modules.php
	mobile/operation/networkmaps.php
	mobile/operation/agent.php
	mobile/operation/agents.php
	mobile/operation/events.php
	mobile/operation/tactical.php
	mobile/operation/visualmaps.php
	mobile/include/ui.class.php
	mobile/include/style/main.css: A lot of fixes
	and improvements in mobile console

2014-02-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/functions_modules.php
	include/functions_agents.php
	include/constants.php: Add code to new "status"
	Warning fired in visual maps
		
	* mobile/operation/agent.php: Fix first time charge
	of code that set same size to both boxes in agent view

2014-02-07  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/networkmaps.php
	mobile/operation/agent.php
	mobile/include/style/main.css
	mobile/include/ui.class.php
	mobile/include/user.class.php
	mobile/images/pandora_mobile_console.png: Improve